syntax = "proto3";

option csharp_namespace = "GrpcGreeterClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  // Return person list 
  rpc ListPersons (Empty) returns (PersonList);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// An empty message.
message Empty {}

// The response message containing the list of persons.
message PersonList {
  repeated Person persons = 1;
}

message Person {
	string name = 1;
	int32 id = 2;
	string email = 3;

	enum PhoneType {
		MOBILE = 0;
		HOME = 1;
		WORK = 2;
	}
	
	message PhoneNumber {
		string number = 1; 
		PhoneType type = 2;
	}

	repeated PhoneNumber phones = 4;
}
